# fortran-tf-lib

./: .gitmodules  README.md
.github/workflows/: tests.yml
fortran-tf-lib/: CMakeLists.txt  README.md
fortran-tf-lib/examples/: Makefile  load_model_f.F90  load_wavenet.F90
fortran-tf-lib/my_model/: keras_metadata.pb  saved_model.pb
fortran-tf-lib/my_model/variables/: variables.index
fortran-tf-lib/src/: Makefile  README.md  fortran_tensorflow_lib.F90  gen_model.py  load_model_c.c  load_model_f.F90  load_model_py.py
fortran-tf-lib/tests/: load_model_f.F90
fortran-tf-lib/tests/generated_code_test/: CMakeLists.txt  test_stub.F90
fortran-tf-lib/tools/process_model/: setup.py
fortran-tf-lib/tools/process_model/src/process_model/: __init__.py  process_model.py
fortran-tf-lib/tools/process_model/src/process_model/templates/: module_start.F90
fortran-tf-lib/tools/tests/: test_process_model.py
my_model/variables/: variables.data-00000-of-00001
src/: Makefile  first_working_c.c  load_simplest_model.py  simplest_model.py
